--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=8282
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+security.basic.enabled: false
+security.ignored=/**
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=B@RN0wls
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
